<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:enabled="true" />

    <item
        android:id="@+id/action_addBook"
        android:title="@string/action_addBook"
        android:enabled="true" />

    <item
        android:id="@+id/action_editBook"
        android:title="@string/action_editBook"
        android:enabled="true" />

    <item
        android:id="@+id/action_deleteBook"
        android:title="@string/action_deleteBook"
        android:enabled="true" />

    <item
        android:id="@+id/action_scanBook"
        android:title="@string/action_scanBook"
        android:enabled="true" />

    <group>
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>
