<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_nbLivre"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/nbLivreDansBiblio"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sortBooksBy"
        android:id="@+id/text_sortBy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/list_livre"
        android:layout_below="@+id/text_nbLivre" />

    <RadioGroup
        android:id="@+id/group_tri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/text_nbLivre"
        android:layout_toRightOf="@+id/text_sortBy"
        android:layout_toEndOf="@+id/text_sortBy">

        <RadioButton
            android:id="@+id/rb_sortById"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_triParId"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_sortByISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_triParISBN"/>
        <RadioButton
            android:id="@+id/rb_sortByTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_triParTitre"/>
        <RadioButton
            android:id="@+id/rb_sortByAuteurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_triParAuteur"/>

    </RadioGroup>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_livre"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:longClickable="true"
        android:layout_below="@id/group_tri"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
