<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_ajouterLivre"
        android:id="@+id/text_addLivre"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edit_ISBNLivre"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/text_addLivre"
        android:layout_marginTop="25dp"
        android:layout_width="fill_parent"
        android:hint="@string/text_enterISBN"
        android:gravity="center"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_findLivre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rechercherLivre"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_ISBNLivre"/>


</RelativeLayout>